fixed the non word wrap

--- a/js/components/bubbleList.module.css
+++ b/js/components/bubbleList.module.css
@@ -10,4 +10,7 @@
     padding: 0.3em 0.8em;
     margin: 0.1em 0;
     display: inline-block;
+    max-width: 100%;
+    box-sizing: border-box;
+    word-wrap: break-word;
 }
