--- a/js/components/room.module.css
+++ b/js/components/room.module.css
@@ -2,12 +2,9 @@
     padding: 0 0.8em;
     margin: 0 auto;
     max-width: 20cm;
-    display: grid;
-    grid-auto-flow: row;
-    grid-auto-rows: auto max-content;
 }
 
-[data-sch=dark] .bg-pale {background-color: #456;}
+[data-sch=dark] .bgPale {background-color: #456;}
 .bgPale {background-color: #cde;;}
 
 .stickyBottom {
